--- a/index.html
+++ b/index.html
@@ -14,59 +14,113 @@
 </head>
 
 <body>
+  <main class="card">
+    <img src="assets/images/image-omelette.jpeg" alt="omelette filled with spinach, dill and vegetables">
+    <h1>
+      Simple Omelette Recipe
+    </h1>
+    <p>
+      An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+      to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+    </p>
 
-  Simple Omelette Recipe
+    <!-- Preparation time -->
+    <article class="prep">
+      <h2 class="prep-title">
+        Preparation time
+      </h2>
+      <ul class="prep-list">
+        <li class="prep-item">
+          <span>Total</span>: Approximately 10 minutes
+        </li>
+        <li class="prep-item">
+          <span>Preparation</span>: 5 minutes
+        </li>
+        <li class="prep-item">
+          <span>Cooking</span>: 5 minutes
+        </li>
+      </ul>
+    </article>
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+    <!-- Ingredients -->
+    <div class="ingredient">
+      <h2 class="ingredient-title">
+        Ingredients
+      </h2>
+      <ul class="ingredient-list">
+        <li class="ingredient-item">2-3 large eggs</li>
+        <li class="ingredient-item">Salt, to taste</li>
+        <li class="ingredient-item">Pepper, to taste</li>
+        <li class="ingredient-item">1 tablespoon of butter or oil</li>
+        <li class="ingredient-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      </ul>
+    </div>
 
-  Preparation time
+    <!-- Instructions -->
+    <div class="instruction">
+      <h2 class="instruction-title">
+        Instructions
+      </h2>
+      <ol class="instruction-list">
+        <li class="instruction-item"><span>Beat the eggs</span>: In a bowl, beat the eggs with a pinch of salt and pepper until
+          they are
+          well mixed.
+          You can add a tablespoon of water or milk for a fluffier texture.</li>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+        <li class="instruction-item"><span>Heat the pan</span>: Place a non-stick frying pan over medium heat and add butter or
+          oil.</li>
 
-  Ingredients
+        <li class="instruction-item"><span>Cook the omelette</span>: Once the butter is melted and bubbling, pour in the eggs.
+          Tilt the pan
+          to ensure
+          the eggs evenly coat the surface.</li>
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
+        <li class="instruction-item"><span>Add fillings (optional)</span>: When the eggs begin to set at the edges but are
+          still slightly
+          runny in the
+          middle, sprinkle your chosen fillings over one half of the omelette.</li>
 
-  Instructions
+        <li class="instruction-item"><span>Fold and serve</span>: As the omelette continues to cook, carefully lift one edge
+          and fold it
+          over the
+          fillings. Let it cook for another minute, then slide it onto a plate.</li>
 
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
-  You can add a tablespoon of water or milk for a fluffier texture.
+        <li class="instruction-item"><span>Enjoy</span>: Serve hot, with additional salt and pepper if needed.</li>
+      </ol>
+    </div>
 
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+    <!-- Nutrition table-->
+    <table>
+      <caption class="nutrition-title">
+        Nutrition
+      </caption>
+      <th class="nutrition-description">
+        The table below shows nutritionitional values per serving without the additional fillings.
+      </th>
+      <tbody>
+        <tr>
+          <td>Calories</td>
+          <td class="nutrition-value">277kcal</td>
+        </tr>
 
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
-  the eggs evenly coat the surface.
+        <tr>
+          <td>Carbs</td>
+          <td class="nutrition-value">0g</td>
+        </tr>
 
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
-  middle, sprinkle your chosen fillings over one half of the omelette.
+        <tr>
+          <td>Protein</td>
+          <td class="nutrition-value">20g</td>
+        </tr>
 
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
-  fillings. Let it cook for another minute, then slide it onto a plate.
+        <tr>
+          <td>Fat</td>
+          <td class="nutrition-value">22g</td>
+        </tr>
+      </tbody>
+    </table>
 
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
+  </main>
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
