--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
   <main class="card">
-    <img src="assets/images/image-omelette.jpeg" alt="omelette filled with spinach, dill and vegetables">
+    <div class="img-container">
+      <img src="assets/images/image-omelette.jpeg" alt="omelette filled with spinach, dill and vegetables">
+    </div>
     <h1>
       Simple Omelette Recipe
     </h1>
@@ -25,78 +27,85 @@
     </p>
 
     <!-- Preparation time -->
-    <article class="prep">
-      <h2 class="prep-title">
+    <article class="preparation">
+      <h2 class="preparation-title">
         Preparation time
       </h2>
-      <ul class="prep-list">
-        <li class="prep-item">
+      <ul class="preparation-list">
+        <li class="preparation-item">
           <span>Total</span>: Approximately 10 minutes
         </li>
-        <li class="prep-item">
+        <li class="preparation-item">
           <span>Preparation</span>: 5 minutes
         </li>
-        <li class="prep-item">
+        <li class="preparation-item">
           <span>Cooking</span>: 5 minutes
         </li>
       </ul>
     </article>
 
     <!-- Ingredients -->
-    <div class="ingredient">
-      <h2 class="ingredient-title">
+    <div class="ingredients">
+      <h2 class="ingredients-title">
         Ingredients
       </h2>
-      <ul class="ingredient-list">
-        <li class="ingredient-item">2-3 large eggs</li>
-        <li class="ingredient-item">Salt, to taste</li>
-        <li class="ingredient-item">Pepper, to taste</li>
-        <li class="ingredient-item">1 tablespoon of butter or oil</li>
-        <li class="ingredient-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      <ul class="ingredients-list">
+        <li class="ingredients-item">2-3 large eggs</li>
+        <li class="ingredients-item">Salt, to taste</li>
+        <li class="ingredients-item">Pepper, to taste</li>
+        <li class="ingredients-item">1 tablespoon of butter or oil</li>
+        <li class="ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
       </ul>
     </div>
 
     <!-- Instructions -->
-    <div class="instruction">
-      <h2 class="instruction-title">
+    <div class="instructions">
+      <h2 class="instructions-title">
         Instructions
       </h2>
-      <ol class="instruction-list">
-        <li class="instruction-item"><span>Beat the eggs</span>: In a bowl, beat the eggs with a pinch of salt and pepper until
+      <ol class="instructions-list">
+        <li class="instructions-item"><span>Beat the eggs</span>: In a bowl, beat the eggs with a pinch of salt and
+          pepper until
           they are
           well mixed.
           You can add a tablespoon of water or milk for a fluffier texture.</li>
 
-        <li class="instruction-item"><span>Heat the pan</span>: Place a non-stick frying pan over medium heat and add butter or
+        <li class="instructions-item"><span>Heat the pan</span>: Place a non-stick frying pan over medium heat and add
+          butter or
           oil.</li>
 
-        <li class="instruction-item"><span>Cook the omelette</span>: Once the butter is melted and bubbling, pour in the eggs.
+        <li class="instructions-item"><span>Cook the omelette</span>: Once the butter is melted and bubbling, pour in
+          the eggs.
           Tilt the pan
           to ensure
           the eggs evenly coat the surface.</li>
 
-        <li class="instruction-item"><span>Add fillings (optional)</span>: When the eggs begin to set at the edges but are
+        <li class="instructions-item"><span>Add fillings (optional)</span>: When the eggs begin to set at the edges but
+          are
           still slightly
           runny in the
           middle, sprinkle your chosen fillings over one half of the omelette.</li>
 
-        <li class="instruction-item"><span>Fold and serve</span>: As the omelette continues to cook, carefully lift one edge
+        <li class="instructions-item"><span>Fold and serve</span>: As the omelette continues to cook, carefully lift one
+          edge
           and fold it
           over the
           fillings. Let it cook for another minute, then slide it onto a plate.</li>
 
-        <li class="instruction-item"><span>Enjoy</span>: Serve hot, with additional salt and pepper if needed.</li>
+        <li class="instructions-item"><span>Enjoy</span>: Serve hot, with additional salt and pepper if needed.</li>
       </ol>
     </div>
 
     <!-- Nutrition table-->
-    <table>
-      <caption class="nutrition-title">
-        Nutrition
+    <table class="nutrition">
+      <caption>
+        <h2 class="nutrition-title">
+          Nutrition
+        </h2>
+        <p class="nutrition-description">
+          The table below shows nutritionitional values per serving without the additional fillings.
+        </p>
       </caption>
-      <th class="nutrition-description">
-        The table below shows nutritionitional values per serving without the additional fillings.
-      </th>
       <tbody>
         <tr>
           <td>Calories</td>
@@ -124,7 +133,7 @@
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">kindi</a>.
   </footer>
 </body>
 
