--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
 <body>
   <main class="card">
-    <div class="img-container">
-      <img src="assets/images/image-omelette.jpeg" alt="omelette filled with spinach, dill and vegetables">
+    <div class="card-img-container">
+      <img class="card-img" src="assets/images/image-omelette.jpeg"
+        alt="omelette filled with spinach, dill and vegetables">
     </div>
     <h1>
       Simple Omelette Recipe
     </h1>
-    <p>
+    <p class="card-description">
       An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
       to perfection, optionally filled with your choice of cheese, vegetables, or meats.
     </p>
