add section class

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </p>
 
     <!-- Preparation time -->
-    <article class="preparation">
+    <article class="preparation section">
       <h2 class="preparation-title">
         Preparation time
       </h2>
@@ -46,7 +46,7 @@
     </article>
 
     <!-- Ingredients -->
-    <div class="ingredients">
+    <div class="ingredients section">
       <h2 class="ingredients-title">
         Ingredients
       </h2>
@@ -60,7 +60,7 @@
     </div>
 
     <!-- Instructions -->
-    <div class="instructions">
+    <div class="instructions section">
       <h2 class="instructions-title">
         Instructions
       </h2>
@@ -98,7 +98,7 @@
     </div>
 
     <!-- Nutrition table-->
-    <table class="nutrition">
+    <table class="nutrition section">
       <caption>
         <h2 class="nutrition-title">
           Nutrition
