--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
       <img class="card-img" src="assets/images/image-omelette.jpeg"
         alt="omelette filled with spinach, dill and vegetables">
     </div>
-    <h1>
-      Simple Omelette Recipe
-    </h1>
-    <p class="card-description">
-      An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
-      to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-    </p>
+    <div class="card-title-container">
+      <h1 class="card-title">
+        Simple Omelette Recipe
+      </h1>
+      <p class="card-description">
+        An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+        to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+      </p>
+    </div>
 
     <!-- Preparation time -->
     <article class="preparation section">
